--- a/test/test.csproj
+++ b/test/test.csproj
@@ -11,5 +11,8 @@
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
+  <ItemGroup>
+  <ProjectReference Include ="..\domain\domain.csproj"/>
+  </ItemGroup>
 
 </Project>
