--- a/data/data.csproj
+++ b/data/data.csproj
@@ -3,5 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+ 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.1" />
+  </ItemGroup>
+   <ItemGroup>
+  <ProjectReference Include ="..\domain\domain.csproj"/>
+  </ItemGroup>
 
 </Project>
