--- a/test/test.csproj
+++ b/test/test.csproj
@@ -14,6 +14,7 @@
    </ItemGroup>
   <ItemGroup>
   <ProjectReference Include="..\domain\domain.csproj" />
+   <ProjectReference Include="..\data\data.csproj" />
   </ItemGroup>
 
 </Project>
