--- a/.gitignore
+++ b/.gitignore
@@ -321,3 +321,4 @@ ASALocalRun/
 # MSBuild Binary and Structured Log
 *.binlog
 data/obj/Debug/netstandard2.0/data.csproj.CoreCompileInputs.cache
+data/obj/Debug/netstandard2.0/data.AssemblyInfo.cs
