--- a/data/data.csproj
+++ b/data/data.csproj
@@ -5,11 +5,9 @@
   </PropertyGroup>
  
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.0-rc1-final" />
     </ItemGroup>
-    <ItemGroup>
-       <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.1" />
-    </ItemGroup>
+   
    <ItemGroup>
 
   <ProjectReference Include="..\domain\domain.csproj" />
