--- a/data/data.csproj
+++ b/data/data.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
  
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.0-rc1-final" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.*" />
     </ItemGroup>
    <ItemGroup>
 
